--- a/pyscript.toml
+++ b/pyscript.toml
@@ -1,6 +1,6 @@
 name = "PyScript UI Library example"
 
-packages = [ "matplotlib","markdown"]
+packages = [ "matplotlib","markdown","plotly","pandas"]
 
 [files]
 "./uilib.py" = "./uilib.py"
